--- a/foundry.toml
+++ b/foundry.toml
@@ -9,4 +9,7 @@ optimizer_runs = 800
 via_ir = false
 ffi = true
 
+[fmt]
+sort_imports = true
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
